; ModuleID = '/home/carl/AnghaBench/php-src/ext/pdo/extr_pdo_stmt.c_pdo_stmt_init.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/pdo/extr_pdo_stmt.c_pdo_stmt_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i8*, i8*, i32, i32 }
%struct.TYPE_9__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32*, i32*, i32, i32, i32 }
%struct.TYPE_10__ = type { i8*, i8*, i32, i32 }

@.str = private unnamed_addr constant [13 x i8] c"PDOStatement\00", align 1
@pdo_dbstmt_functions = common dso_local global i32 0, align 4
@pdo_dbstmt_ce = common dso_local global %struct.TYPE_8__* null, align 8
@pdo_stmt_iter_get = common dso_local global i32 0, align 4
@pdo_dbstmt_new = common dso_local global i32 0, align 4
@zend_class_serialize_deny = common dso_local global i8* null, align 8
@zend_class_unserialize_deny = common dso_local global i8* null, align 8
@zend_ce_traversable = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"queryString\00", align 1
@ZEND_ACC_PUBLIC = common dso_local global i32 0, align 4
@pdo_dbstmt_object_handlers = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@std_object_handlers = common dso_local global i32 0, align 4
@pdo_stmt_t = common dso_local global i32 0, align 4
@std = common dso_local global i32 0, align 4
@zend_objects_destroy_object = common dso_local global i32 0, align 4
@pdo_dbstmt_free_storage = common dso_local global i32 0, align 4
@dbstmt_prop_write = common dso_local global i32 0, align 4
@dbstmt_prop_delete = common dso_local global i32 0, align 4
@dbstmt_method_get = common dso_local global i32 0, align 4
@dbstmt_compare = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [7 x i8] c"PDORow\00", align 1
@pdo_row_functions = common dso_local global i32 0, align 4
@pdo_row_ce = common dso_local global %struct.TYPE_10__* null, align 8
@ZEND_ACC_FINAL = common dso_local global i32 0, align 4
@pdo_row_new = common dso_local global i32 0, align 4
@pdo_row_object_handlers = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@pdo_row_free_storage = common dso_local global i32 0, align 4
@row_prop_read = common dso_local global i32 0, align 4
@row_prop_write = common dso_local global i32 0, align 4
@row_prop_exists = common dso_local global i32 0, align 4
@row_prop_delete = common dso_local global i32 0, align 4
@row_dim_read = common dso_local global i32 0, align 4
@row_dim_write = common dso_local global i32 0, align 4
@row_dim_exists = common dso_local global i32 0, align 4
@row_dim_delete = common dso_local global i32 0, align 4
@row_get_properties_for = common dso_local global i32 0, align 4
@row_method_get = common dso_local global i32 0, align 4
@row_get_ctor = common dso_local global i32 0, align 4
@row_get_classname = common dso_local global i32 0, align 4
@row_compare = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pdo_stmt_init() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* %1, align 4
  %3 = load i32, i32* @pdo_dbstmt_functions, align 4
  %4 = call i32 @INIT_CLASS_ENTRY(i32 %2, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %3)
  %5 = call i8* @zend_register_internal_class(i32* %1)
  %6 = bitcast i8* %5 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %6, %struct.TYPE_8__** @pdo_dbstmt_ce, align 8
  %7 = load i32, i32* @pdo_stmt_iter_get, align 4
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** @pdo_dbstmt_ce, align 8
  %9 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 3
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* @pdo_dbstmt_new, align 4
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** @pdo_dbstmt_ce, align 8
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i32 0, i32 2
  store i32 %10, i32* %12, align 8
  %13 = load i8*, i8** @zend_class_serialize_deny, align 8
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** @pdo_dbstmt_ce, align 8
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 1
  store i8* %13, i8** %15, align 8
  %16 = load i8*, i8** @zend_class_unserialize_deny, align 8
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** @pdo_dbstmt_ce, align 8
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 0
  store i8* %16, i8** %18, align 8
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** @pdo_dbstmt_ce, align 8
  %20 = load i32, i32* @zend_ce_traversable, align 4
  %21 = call i32 @zend_class_implements(%struct.TYPE_8__* %19, i32 1, i32 %20)
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** @pdo_dbstmt_ce, align 8
  %23 = load i32, i32* @ZEND_ACC_PUBLIC, align 4
  %24 = call i32 @zend_declare_property_null(%struct.TYPE_8__* %22, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i32 11, i32 %23)
  %25 = call i32 @memcpy(%struct.TYPE_9__* @pdo_dbstmt_object_handlers, i32* @std_object_handlers, i32 4)
  %26 = load i32, i32* @pdo_stmt_t, align 4
  %27 = load i32, i32* @std, align 4
  %28 = call i32 @XtOffsetOf(i32 %26, i32 %27)
  store i32 %28, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_dbstmt_object_handlers, i32 0, i32 17), align 8
  %29 = load i32, i32* @zend_objects_destroy_object, align 4
  store i32 %29, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_dbstmt_object_handlers, i32 0, i32 16), align 4
  %30 = load i32, i32* @pdo_dbstmt_free_storage, align 4
  store i32 %30, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_dbstmt_object_handlers, i32 0, i32 15), align 8
  %31 = load i32, i32* @dbstmt_prop_write, align 4
  store i32 %31, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_dbstmt_object_handlers, i32 0, i32 11), align 4
  %32 = load i32, i32* @dbstmt_prop_delete, align 4
  store i32 %32, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_dbstmt_object_handlers, i32 0, i32 9), align 4
  %33 = load i32, i32* @dbstmt_method_get, align 4
  store i32 %33, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_dbstmt_object_handlers, i32 0, i32 3), align 4
  %34 = load i32, i32* @dbstmt_compare, align 4
  store i32 %34, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_dbstmt_object_handlers, i32 0, i32 0), align 8
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_dbstmt_object_handlers, i32 0, i32 14), align 8
  %35 = load i32, i32* %1, align 4
  %36 = load i32, i32* @pdo_row_functions, align 4
  %37 = call i32 @INIT_CLASS_ENTRY(i32 %35, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i32 %36)
  %38 = call i8* @zend_register_internal_class(i32* %1)
  %39 = bitcast i8* %38 to %struct.TYPE_10__*
  store %struct.TYPE_10__* %39, %struct.TYPE_10__** @pdo_row_ce, align 8
  %40 = load i32, i32* @ZEND_ACC_FINAL, align 4
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** @pdo_row_ce, align 8
  %42 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %41, i32 0, i32 3
  %43 = load i32, i32* %42, align 4
  %44 = or i32 %43, %40
  store i32 %44, i32* %42, align 4
  %45 = load i32, i32* @pdo_row_new, align 4
  %46 = load %struct.TYPE_10__*, %struct.TYPE_10__** @pdo_row_ce, align 8
  %47 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %46, i32 0, i32 2
  store i32 %45, i32* %47, align 8
  %48 = load i8*, i8** @zend_class_serialize_deny, align 8
  %49 = load %struct.TYPE_10__*, %struct.TYPE_10__** @pdo_row_ce, align 8
  %50 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %49, i32 0, i32 1
  store i8* %48, i8** %50, align 8
  %51 = load i8*, i8** @zend_class_unserialize_deny, align 8
  %52 = load %struct.TYPE_10__*, %struct.TYPE_10__** @pdo_row_ce, align 8
  %53 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %52, i32 0, i32 0
  store i8* %51, i8** %53, align 8
  %54 = call i32 @memcpy(%struct.TYPE_9__* @pdo_row_object_handlers, i32* @std_object_handlers, i32 4)
  %55 = load i32, i32* @pdo_row_free_storage, align 4
  store i32 %55, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 15), align 8
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 14), align 8
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 13), align 8
  %56 = load i32, i32* @row_prop_read, align 4
  store i32 %56, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 12), align 8
  %57 = load i32, i32* @row_prop_write, align 4
  store i32 %57, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 11), align 4
  %58 = load i32, i32* @row_prop_exists, align 4
  store i32 %58, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 10), align 8
  %59 = load i32, i32* @row_prop_delete, align 4
  store i32 %59, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 9), align 4
  %60 = load i32, i32* @row_dim_read, align 4
  store i32 %60, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 8), align 8
  %61 = load i32, i32* @row_dim_write, align 4
  store i32 %61, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 7), align 4
  %62 = load i32, i32* @row_dim_exists, align 4
  store i32 %62, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 6), align 8
  %63 = load i32, i32* @row_dim_delete, align 4
  store i32 %63, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 5), align 4
  %64 = load i32, i32* @row_get_properties_for, align 4
  store i32 %64, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 4), align 8
  %65 = load i32, i32* @row_method_get, align 4
  store i32 %65, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 3), align 4
  %66 = load i32, i32* @row_get_ctor, align 4
  store i32 %66, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 2), align 8
  %67 = load i32, i32* @row_get_classname, align 4
  store i32 %67, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 1), align 4
  %68 = load i32, i32* @row_compare, align 4
  store i32 %68, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @pdo_row_object_handlers, i32 0, i32 0), align 8
  ret void
}

declare dso_local i32 @INIT_CLASS_ENTRY(i32, i8*, i32) #1

declare dso_local i8* @zend_register_internal_class(i32*) #1

declare dso_local i32 @zend_class_implements(%struct.TYPE_8__*, i32, i32) #1

declare dso_local i32 @zend_declare_property_null(%struct.TYPE_8__*, i8*, i32, i32) #1

declare dso_local i32 @memcpy(%struct.TYPE_9__*, i32*, i32) #1

declare dso_local i32 @XtOffsetOf(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
